--- a/package.json
+++ b/package.json
@@ -1,82 +1,84 @@
 {
-  "name": "tkm2",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-brands-svg-icons": "^5.12.1",
-    "@fortawesome/free-regular-svg-icons": "^5.12.1",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "@fortawesome/vue-fontawesome": "^0.1.9",
-    "apexcharts": "^3.10.1",
-    "axios": "^0.19.0",
-    "core-js": "^3.3.2",
-    "register-service-worker": "^1.6.2",
-    "v-calendar": "^1.0.1",
-    "vee-validate": "^3.2.3",
-    "vue": "^2.6.10",
-    "vue-apexcharts": "^1.5.1",
-    "vue-clipboard2": "^0.3.1",
-    "vue-form-wizard": "^0.8.4",
-    "vue-google-signin-button-directive": "^1.0.3",
-    "vue-page-transition": "^0.2.2",
-    "vue-router": "^3.1.3",
-    "vue-scrollto": "^2.17.1",
-    "vue-sessionstorage": "^1.0.0",
-    "vue-social-sharing": "^2.4.7",
-    "vuelidate": "^0.7.5",
-    "vuex": "^3.0.1"
-  },
-  "devDependencies": {
-    "@tailwindcss/custom-forms": "^0.2.1",
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0",
-    "@vue/cli-plugin-pwa": "^4.0.0",
-    "@vue/cli-plugin-unit-mocha": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
-    "babel-eslint": "^10.0.3",
-    "chai": "^4.1.2",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "tailwindcss": "^1.2.0",
-    "tailwindcss-spinner": "^1.0.0",
-    "vue-template-compiler": "^2.6.10"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "overrides": [
-      {
-        "files": [
-          "**/__tests__/*.{j,t}s?(x)"
-        ],
-        "env": {
-          "mocha": true
-        }
-      }
-    ]
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+	"name": "tkm2",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve -p 3098",
+		"build": "vue-cli-service build",
+		"lint": "vue-cli-service lint",
+		"test:unit": "vue-cli-service test:unit",
+		"start": "http-server dist -p 3098"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.27",
+		"@fortawesome/free-brands-svg-icons": "^5.12.1",
+		"@fortawesome/free-regular-svg-icons": "^5.12.1",
+		"@fortawesome/free-solid-svg-icons": "^5.12.1",
+		"@fortawesome/vue-fontawesome": "^0.1.9",
+		"apexcharts": "^3.10.1",
+		"axios": "^0.19.0",
+		"core-js": "^3.3.2",
+		"http-server": "^0.12.3",
+		"register-service-worker": "^1.6.2",
+		"v-calendar": "^1.0.1",
+		"vee-validate": "^3.2.3",
+		"vue": "^2.6.10",
+		"vue-apexcharts": "^1.5.1",
+		"vue-clipboard2": "^0.3.1",
+		"vue-form-wizard": "^0.8.4",
+		"vue-google-signin-button-directive": "^1.0.3",
+		"vue-page-transition": "^0.2.2",
+		"vue-router": "^3.1.3",
+		"vue-scrollto": "^2.17.1",
+		"vue-sessionstorage": "^1.0.0",
+		"vue-social-sharing": "^2.4.7",
+		"vuelidate": "^0.7.5",
+		"vuex": "^3.0.1"
+	},
+	"devDependencies": {
+		"@tailwindcss/custom-forms": "^0.2.1",
+		"@vue/cli-plugin-babel": "^4.0.0",
+		"@vue/cli-plugin-eslint": "^4.0.0",
+		"@vue/cli-plugin-pwa": "^4.0.0",
+		"@vue/cli-plugin-unit-mocha": "^4.0.0",
+		"@vue/cli-service": "^4.0.0",
+		"@vue/test-utils": "1.0.0-beta.29",
+		"babel-eslint": "^10.0.3",
+		"chai": "^4.1.2",
+		"eslint": "^5.16.0",
+		"eslint-plugin-vue": "^5.0.0",
+		"sass": "^1.19.0",
+		"sass-loader": "^8.0.0",
+		"tailwindcss": "^1.2.0",
+		"tailwindcss-spinner": "^1.0.0",
+		"vue-template-compiler": "^2.6.10"
+	},
+	"eslintConfig": {
+		"root": true,
+		"env": {
+			"node": true
+		},
+		"extends": [
+			"plugin:vue/essential",
+			"eslint:recommended"
+		],
+		"rules": {},
+		"parserOptions": {
+			"parser": "babel-eslint"
+		},
+		"overrides": [
+			{
+				"files": [
+					"**/__tests__/*.{j,t}s?(x)"
+				],
+				"env": {
+					"mocha": true
+				}
+			}
+		]
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions"
+	]
 }
