--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
 VUE_APP_GOOGLE_CLIENT_ID=1032115992760-1ls3n8nqve6e1dhcdg3rvqs9r09ik4li.apps.googleusercontent.com
 
 # POST
-VUE_APP_LOGIN_API=https://api.tkm.riliv.co.id/api/v0/tkm/auth/login
+VUE_APP_CHECK_CODE_API=https://devapi-b2b.riliv.co.id/api/v1/check-company-code
+VUE_APP_LOGIN_API=https://devapi-b2b.riliv.co.id/api/v1/login
+VUE_APP_REGISTRATION_API=https://devapi-b2b.riliv.co.id/api/v1/user-company-detail/store
+VUE_APP_SUBMIT_ANSWER_API=https://devapi-b2b.riliv.co.id/api/v1/personality-answer/store
 VUE_APP_CHECK_TOKEN_API=https://api.tkm.riliv.co.id/api/v0/tkm/auth/checkToken
-VUE_APP_SUBMIT_ANSWER_API=https://api.tkm.riliv.co.id/api/v0/tkm/answers
-VUE_APP_REGISTRATION_API=https://api.tkm.riliv.co.id/api/v0/tkm/user/register
+
 
 # GET
 VUE_APP_CHECK_USER_API=https://api.tkm.riliv.co.id/api/v0/tkm/user/register/check/
