Correction in force back to home when token is not exist

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VUE_APP_GOOGLE_CLIENT_ID=1032115992760-1ls3n8nqve6e1dhcdg3rvqs9r09ik4li.apps.googleusercontent.com
+VUE_APP_CLIENT_ID_RILIV=528048302697-abee77qa96n2061sv4vg0vdthijiedml.apps.googleusercontent.com
 
 # POST
 VUE_APP_CHECK_CODE_API=https://devapi-b2b.riliv.co.id/api/v1/check-company-code
