--- a/.env
+++ b/.env
@@ -26,3 +26,5 @@ VUE_APP_CHECK_TOKEN_API_DEV=https://api.tkm.riliv.co.id/api/v0/tkm/auth/checkTok
 # GET
 VUE_APP_CHECK_USER_API_DEV=https://api.tkm.riliv.co.id/api/v0/tkm/user/register/check/
 VUE_APP_GET_RESULT_API_DEV=https://devapi-b2b.riliv.co.id/api/v1/personality-result/detail
+
+VUE_APP_API_URL= https://devapi-b2b.riliv.co.id/api/v1
