Add whatsapp field to registration

--- a/.env
+++ b/.env
@@ -15,16 +15,16 @@ VUE_APP_CHECK_USER_API=https://api.tkm.riliv.co.id/api/v0/tkm/user/register/chec
 VUE_APP_GET_RESULT_API=https://api-tesb2b.riliv.co.id/api/v1/personality-result/detail
 
 # POST
-VUE_APP_CHECK_CODE_API_DEV=https://devapi-b2b.riliv.co.id/api/v1/check-company-code
-VUE_APP_LOGIN_API_DEV=https://devapi-b2b.riliv.co.id/api/v1/login
-VUE_APP_REGISTRATION_API_DEV=https://devapi-b2b.riliv.co.id/api/v1/user-company-detail/store
-VUE_APP_GET_QUESTIONS_API_DEV=https://devapi-b2b.riliv.co.id/api/v1/personality-question/all
-VUE_APP_SUBMIT_ANSWER_API_DEV=https://devapi-b2b.riliv.co.id/api/v1/personality-answer/store
+VUE_APP_CHECK_CODE_API_DEV=https://devtestb2bapi.riliv.id/api/v1/check-company-code
+VUE_APP_LOGIN_API_DEV=https://devtestb2bapi.riliv.id/api/v1/login
+VUE_APP_REGISTRATION_API_DEV=https://devtestb2bapi.riliv.id/api/v1/user-company-detail/store
+VUE_APP_GET_QUESTIONS_API_DEV=https://devtestb2bapi.riliv.id/api/v1/personality-question/all
+VUE_APP_SUBMIT_ANSWER_API_DEV=https://devtestb2bapi.riliv.id/api/v1/personality-answer/store
 VUE_APP_CHECK_TOKEN_API_DEV=https://api.tkm.riliv.co.id/api/v0/tkm/auth/checkToken
 
 
 # GET
 VUE_APP_CHECK_USER_API_DEV=https://api.tkm.riliv.co.id/api/v0/tkm/user/register/check/
-VUE_APP_GET_RESULT_API_DEV=https://devapi-b2b.riliv.co.id/api/v1/personality-result/detail
+VUE_APP_GET_RESULT_API_DEV=https://devtestb2bapi.riliv.id/api/v1/personality-result/detail
 
-VUE_APP_API_URL= https://devapi-b2b.riliv.co.id/api/v1
+VUE_APP_API_URL=https://devtestb2bapi.riliv.id/api/v1
